Fix Spacing Issue
This commit fixes another spacing issue in the events grid.

--- a/frontend/src/app/event/event-page/event-page.component.css
+++ b/frontend/src/app/event/event-page/event-page.component.css
@@ -39,7 +39,7 @@
 
 .details-column {
     position: fixed;
-    right: 24px;
+    right: 36px;
     bottom: 24px;
     top: 170px;
     width: 548px;
